--- a/src/settings.json
+++ b/src/settings.json
@@ -1,8 +1,8 @@
 {
     "owner": [
-        "6285892766102@s.whatsapp.net"
+        "917842346461@s.whatsapp.net"
     ],
     "prefix": "#",
-    "lang": "ind",
+    "lang": "en",
     "anteikey": "set apikey on here"
 }
