--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "p-well",
+  "name": "weabot",
   "description": "whatsapp bot build with nodejs",
   "repository": "https://github.com/well300/weabot",
   "logo": "https://i.pinimg.com/236x/c7/d6/3d/c7d63d91a52a4ffc4ae35b257def2b54.jpg",
