--- a/app.json
+++ b/app.json
@@ -1,7 +1,12 @@
 {
-  "name": "well300",
+  "name": "whatsapp-bot",
   "description": "whatsapp bot build with nodejs",
-  "repository": "https://github.com/well300/weabot",
-  "logo": "https://i.pinimg.com/236x/c7/d6/3d/c7d63d91a52a4ffc4ae35b257def2b54.jpg",
-  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation"],
+  "repository": "https://github.com/zeeoneofc/Alphabot",
+  "logo": "https://c.top4top.io/p_2069qnvob1.jpg",
+  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation"]
+  "buildpacks": [{
+    "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick"
+  }, {
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+  }]
 }
