--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-bot",
+  "name": "weabot",
   "description": "whatsapp bot build with nodejs",
   "repository": "https://github.com/well300/weabot",
   "logo": "https://c.top4top.io/p_2069qnvob1.jpg",
